--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "three": "^0.161.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
@@ -22,13 +23,17 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.10",
+    "@types/three": "^0.161.2",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.5.1",
     "jsdom": "^24.0.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
+    "vite-plugin-vuetify": "^2.0.1",
     "vitest": "^1.2.2",
     "vue-tsc": "^1.8.27"
   }
