feat: early form of header

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,6 +11,8 @@
       "@/*": ["./src/*"]
     },
 
-    "moduleResolution": "node"
+    "moduleResolution": "Node",
+
+    "types": ["element-plus/global"]
   }
 }
