--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "element-plus": "^2.5.5",
     "pinia": "^2.1.7",
     "three": "^0.161.0",
     "vue": "^3.4.15",
@@ -32,6 +33,8 @@
     "less-loader": "^12.2.0",
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.3.0",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
     "vite-plugin-vuetify": "^2.0.1",
     "vitest": "^1.2.2",
