feat: divination with fake data

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "chart.js": "^4.4.1",
     "element-plus": "^2.5.5",
     "pinia": "^2.1.7",
     "three": "^0.161.0",
     "vue": "^3.4.15",
+    "vue-chartjs": "^5.3.0",
     "vue-i18n": "^9.9.1",
     "vue-router": "^4.2.5"
   },
