--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "chart.js": "^4.4.1",
+    "crypto-js": "^4.2.0",
     "element-plus": "^2.5.5",
     "pinia": "^2.1.7",
     "three": "^0.161.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@playwright/test": "^1.41.1",
     "@tsconfig/node20": "^20.1.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.10",
     "@types/three": "^0.161.2",
